# fp-assessment-rag-inbox

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TASK.md  bandit.yaml  docker-compose.yml  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.semgrep/: custom-rules.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  SPEC.md
scripts/: bootstrap_db.py  checkpoint.sh  ci_local.sh  db-init.sql  entrypoint.sh  score_l1.py
scripts/llm_proxy/: config.yaml  proxy.py
src/: __init__.py  main.py
src/db/: __init__.py  session.py
src/models/: __init__.py  ticket.py
src/routes/: __init__.py  ingest.py  query.py
src/services/: chunker.py  config_service.py  embedder.py  generator.py  retriever.py
tests/: conftest.py  test_chunker.py  test_config.py  test_generator.py  test_integration.py  test_retriever.py  test_security.py
tests/fixtures/: llm_responses.json  tickets.json
