[project]
name = "fp-assessment-rag-inbox"
version = "0.1.0"
description = "RAG API over a support-ticket inbox (FutureProofing technical assessment)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "FutureProofing" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-ai>=0.0.14",
    "sqlalchemy[asyncio]>=2.0.32",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.2",
    "sentence-transformers>=3.0.1",
    "numpy>=1.26.0,<3.0.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.1",
    "anyio>=4.4.0",
    "ruff>=0.6.0",
    "bandit>=1.7.9",
    "semgrep>=1.80.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# NOTE: `uv lock` must be run during the Docker build to materialise uv.lock.
# We do not check it in from local dev because infra owns the reproducible build pipeline.

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = [
    "-ra",
    "--strict-markers",
]
markers = [
    "slow: mark test as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", "src/main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
